fixed bug with homonymes

--- a/extended_word_lookup.ipynb
+++ b/extended_word_lookup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,12 @@
     "                        usecols=[\"path\", \"id\"],\n",
     "                       index_col=\"path\")\n",
     "names_csv = pd.read_csv(\"./data/pleiades-names.csv\", \n",
-    "                        usecols=[\"title\", \"pid\"]).rename(columns={\"pid\":\"path\"})\n"
+    "                        usecols=[\"title\", \"pid\"]).rename(columns={\"pid\":\"path\"})\n",
+    "\n",
+    "def save_dict_to_file(dic, path):\n",
+    "    f = open(path,'w')\n",
+    "    f.write(str(dic))\n",
+    "    f.close()"
    ]
   },
   {
@@ -26,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,22 +43,22 @@
     "        if row['id'] != ext_word_lookup[row['title']]:\n",
     "            Homonymes.append(row['title'])\n",
     "            del ext_word_lookup[row['title']]\n",
-    "    else:\n",
+    "    elif row['title'] not in Homonymes:\n",
     "        ext_word_lookup[row['title']]= row['id']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2559"
+       "2151"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,27 +69,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "265876"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'Argos'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-160-75befaf9c6a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mext_word_lookup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Argos'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'Argos'"
+     ]
     }
    ],
    "source": [
-    "ext_word_lookup['Kondabora']"
+    "ext_word_lookup['Argos']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1112,7 @@
        " ...]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1147,7 @@
        "130"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -2207,23 +2213,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dict_to_file(ext_word_lookup, \"./data/word_lookup.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "148053"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jo\n"
+     ]
     }
    ],
-   "source": [
-    "ext_word_lookup['Col. Aquae Sextiae']"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jo\n",
+      "jo\n",
+      "jo\n",
+      "jo\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
