--- a/pleiades.ipynb
+++ b/pleiades.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        "[36467 rows x 9 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "Name: 48210386, dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
        "42.082885"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2270,7 @@
        " ...]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2314,8 +2314,8 @@
     "        \"geometry\": {\n",
     "             \"type\": \"Point\",\n",
     "             \"coordinates\": [\n",
-    "                 Lat,\n",
-    "                 Lng\n",
+    "                 Lng,\n",
+    "                 Lat\n",
     "             ]  \n",
     "         }\n",
     "        }\n",
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2354,13 +2354,19 @@
     "    \"type\": \"FeatureCollection\",\n",
     "    \"features\": features\n",
     " }\n",
-    "with open('./FeatureCollection.json', 'w') as f:  # writing JSON object\n",
-    "    json.dump(FeatureCollection, f, indent=1)\n"
+    "\n",
+    "f = open('./FeatureCollection.js', 'w')  # writing JSON object\n",
+    "f.write(\"var placeFeatures = \\n\")\n",
+    "f.flush\n",
+    "f.close()\n",
+    "\n",
+    "with open('./FeatureCollection.js', 'a') as f:  # writing JSON object\n",
+    "    json.dump(FeatureCollection, f, indent=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2369,13 +2375,35 @@
        "208"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-24e52910678d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbla\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFeatureCollection\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\u001b[0m in \u001b[0;36mdump\u001b[0;34m(obj, fp, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[1;32m    178\u001b[0m     \u001b[0;31m# a debuggability cost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mchunk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 180\u001b[0;31m         \u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
+     ]
+    }
+   ],
+   "source": [
+    "\n"
    ]
   },
   {
