added new Topic Tasks

--- a/pleiades.ipynb
+++ b/pleiades.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        "[36467 rows x 11 columns]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "Name: 48210386, dtype: object"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
        "42.4193742"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,13 +1348,13 @@
    "metadata": {},
    "source": [
     "The big problem here: We do it the other way around. We are scanning the Corpus for the titles of places!    \n",
-    "At the same time we need to be aware that there might be different words indicating the same place (Athens, Athenian, Athenians .... )    \n",
+    "At the same time we need to be aware that there might be different words indicating the same place (Athens, Athenae ..). \n",
     "The idea is to create a huge python-dictionary that maps words representing places to the corresponding id of our datatable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
        "331"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,11 +1521,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_words = [\"war\", \"fight\", \"battle\"]\n",
+    "topic_words = [\"croesus\"]\n",
     "place_for_topic_count ={}\n",
     "scope = 15\n",
     "\n",
@@ -1541,80 +1541,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'colchis': 1,\n",
-       " 'phasis': 1,\n",
-       " 'priene': 1,\n",
-       " 'miletus': 6,\n",
-       " 'cimmerians': 2,\n",
-       " 'alyattes': 4,\n",
-       " 'lydia': 2,\n",
-       " 'erythrae': 2,\n",
-       " 'eleusis': 1,\n",
-       " 'athens': 8,\n",
-       " 'tegea': 1,\n",
-       " 'delphi': 2,\n",
-       " 'sardis': 5,\n",
-       " 'pteria': 1,\n",
-       " 'phocaea': 1,\n",
-       " 'thyrea': 1,\n",
-       " 'nineveh': 1,\n",
-       " 'babylon': 3,\n",
-       " 'ionia': 4,\n",
-       " 'assyria': 1,\n",
-       " 'syria': 1,\n",
-       " 'sidon': 1,\n",
-       " 'momemphis': 2,\n",
-       " 'thebes': 1,\n",
-       " 'corinth': 1,\n",
-       " 'lycia': 1,\n",
-       " 'araxes': 1,\n",
-       " 'samos': 6,\n",
-       " 'lance': 1,\n",
-       " 'nysa': 1,\n",
-       " 'scythia': 3,\n",
+       "{'alyattes': 6,\n",
+       " 'ionia': 2,\n",
+       " 'lydia': 6,\n",
+       " 'sardis': 20,\n",
+       " 'athens': 4,\n",
+       " 'delphi': 6,\n",
+       " 'sparta': 3,\n",
+       " 'thornax': 1,\n",
+       " 'laconia': 1,\n",
+       " 'cappadocia': 3,\n",
+       " 'halys': 1,\n",
+       " 'pteria': 2,\n",
+       " 'sinope': 1,\n",
        " 'euxine': 1,\n",
-       " 'thermodon': 1,\n",
-       " 'sauromatae': 1,\n",
-       " 'maeotis': 1,\n",
-       " 'libya': 1,\n",
-       " 'psylli': 1,\n",
-       " 'strymon': 1,\n",
-       " 'crotona': 1,\n",
-       " 'sybaris': 1,\n",
-       " 'sicily': 1,\n",
-       " 'sicyon': 2,\n",
-       " 'argos': 1,\n",
-       " 'chalcis': 1,\n",
+       " 'lacedaemon': 1,\n",
+       " 'thebes': 1,\n",
        " 'boeotia': 1,\n",
-       " 'tanagra': 1,\n",
-       " 'attica': 3,\n",
-       " 'ephesus': 2,\n",
-       " 'salamis': 1,\n",
-       " 'maeander': 2,\n",
-       " 'aeolis': 1,\n",
-       " 'cyme': 1,\n",
-       " 'chios': 2,\n",
-       " 'lade': 1,\n",
-       " 'polichne': 1,\n",
-       " 'atarneus': 1,\n",
-       " 'lampsacus': 1,\n",
-       " 'tiryns': 1,\n",
-       " 'hercules': 1,\n",
-       " 'marathon': 4,\n",
-       " 'sparta': 1,\n",
-       " 'paros': 1,\n",
-       " 'lemnos': 2,\n",
-       " 'macedonia': 1,\n",
-       " 'abide': 1}"
+       " 'babylon': 1,\n",
+       " 'agbatana': 4,\n",
+       " 'anger': 1,\n",
+       " 'lampsacus': 1}"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1625,20 +1581,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "373785"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "features = []\n",
+    "for word, count in place_for_topic_count.items():\n",
+    "    features.append(\n",
+    "        feature2Json(\n",
+    "            datatable.loc[word_lookup[word]]['title'],\n",
+    "            datatable.loc[word_lookup[word]]['description'],\n",
+    "            datatable.loc[word_lookup[word]]['reprLat'], \n",
+    "            datatable.loc[word_lookup[word]]['reprLong'],\n",
+    "            count,\n",
+    "            datatable.loc[word_lookup[word]]['featureTypes'],\n",
+    "            datatable.loc[word_lookup[word]]['timePeriodsKeys'],\n",
+    "            datatable.loc[word_lookup[word]]['timePeriodsRange'],\n",
+    "            datatable.loc[word_lookup[word]]['minDate'],\n",
+    "            datatable.loc[word_lookup[word]]['maxDate']\n",
+    "        )\n",
+    "    )\n",
+    "FeatureCollection = {\n",
+    "    \"type\": \"FeatureCollection\",\n",
+    "    \"features\": features\n",
+    " }\n",
+    "\n",
+    "f = open('./FeatureCollection.js', 'w')  # start to write JS-variable\n",
+    "f.write(\"var placeFeatures = \\n\")\n",
+    "f.flush\n",
+    "f.close()\n",
+    "\n",
+    "with open('./croesus.js', 'a') as f:  # append JSON object\n",
+    "    json.dump(FeatureCollection, f, indent=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
