--- a/pleiades.ipynb
+++ b/pleiades.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        "[36467 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "Name: 48210386, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
        "42.4193742"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
        "188799"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
        " 'abide': {'Count': [1, [186]], 'War': [1, [186]]}}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "dict_keys(['colchis', 'phasis', 'priene', 'miletus', 'cimmerians', 'alyattes', 'lydia', 'erythrae', 'eleusis', 'sardis', 'athens', 'tegea', 'delphi', 'pteria', 'phocaea', 'thyrea', 'nineveh', 'babylon', 'ionia', 'assyria', 'syria', 'sidon', 'thebes', 'corinth', 'lycia', 'samos', 'lance', 'nysa', 'scythia', 'euxine', 'thermodon', 'sauromatae', 'maeotis', 'libya', 'psylli', 'strymon', 'crotona', 'sybaris', 'sicily', 'sicyon', 'argos', 'attica', 'ephesus', 'salamis', 'maeander', 'aeolis', 'cyme', 'chios', 'lade', 'atarneus', 'lampsacus', 'tiryns', 'hercules', 'marathon', 'sparta', 'paros', 'lemnos', 'macedonia', 'abide'])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,8 +1643,8 @@
     "             \"timePeriodsRange\": timePeriodsRange,\n",
     "             \"minDate\": minDate,\n",
     "             \"maxDate\": maxDate,\n",
+    "             \"Analysis\": singe_place_analysis,\n",
     "         },\n",
-    "        \"Analysis\": singe_place_analysis,\n",
     "        \"geometry\": {\n",
     "             \"type\": \"Point\",\n",
     "             \"coordinates\": [\n",
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
     "                         place_analysis = place_analysis, \n",
     "                         collection_name = \"War_Topic\")\n",
     "\n",
-    "place_analysis = analyse_Text([[\"croesus\"]], [\"Croesus\"] )\n",
+    "place_analysis = analyse_Text([[\"croesus\"]], [\"Count\"] )\n",
     "write_Feature_Collection( filepath = './croesus.js', \n",
     "                         place_analysis = place_analysis, \n",
     "                         collection_name = \"Croesus\")\n",
