added better result

--- a/pleiades.ipynb
+++ b/pleiades.ipynb
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,9 +1694,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'analyse_Text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2f89d87dd818>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplace_analysis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0manalyse_Text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m write_Feature_Collection( filepath = './count.js', \n\u001b[1;32m      3\u001b[0m                          \u001b[0mplace_analysis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplace_analysis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                          collection_name = \"count\")\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'analyse_Text' is not defined"
+     ]
+    }
+   ],
    "source": [
     "place_analysis = analyse_Text([[]])\n",
     "write_Feature_Collection( filepath = './count.js', \n",
@@ -1724,45 +1736,32 @@
     "                         place_analysis = place_analysis, \n",
     "                         collection_name = \"Water_Topic\")\n",
     "\n",
-    "place_analysis = war_rel_water = analyse_Text([[\"army\", \" revolt\", \" march\", \" war\", \" weapon\", \" battle\", \" death\", \" barbarians\", \" revolt\", \" cavalry\"],\n",
+    "place_analysis = analyse_Text([[\"army\", \" revolt\", \" march\", \" war\", \" weapon\", \" battle\", \" death\", \" barbarians\", \" revolt\", \" cavalry\"],\n",
     "                        [\"temple\", \" god\", \" gods\", \" goddess\", \" sacrifice\", \" sacred\", \" priests\", \" zeus\", \" priests\", \" oracle\"],\n",
     "                       [\"river\", \" rivers\", \" gulf\", \" sea\", \" dwell\", \" flow\", \" flows\", \" lake\", \" stream\", \" ships\", \" sailed\"]], \n",
     "                         [\"War\", \"Religion\", \"Water\"] )\n",
     "write_Feature_Collection( filepath = './war_religion_water.js', \n",
     "                         place_analysis = place_analysis, \n",
-    "                         collection_name = \"War_Religion_Water_Topic\")"
+    "                         collection_name = \"War_Religion_Water_Topic\")\n",
+    "\n",
+    "place_analysis = analyse_Text([[\"army\", \" revolt\", \" march\", \" war\", \" weapon\", \" battle\", \" death\", \" barbarians\", \" revolt\", \" cavalry\"],\n",
+    "                        [\"temple\", \" god\", \" gods\", \" goddess\", \" sacrifice\", \" sacred\", \" priests\", \" zeus\", \" priests\", \" oracle\"]], \n",
+    "                         [\"War\", \"Religion\"] )\n",
+    "write_Feature_Collection( filepath = './war_religion.js', \n",
+    "                         place_analysis = place_analysis, \n",
+    "                         collection_name = \"War_Religion_Topic\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Number of topic lists needs to be equal to number of topic names!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-c6c330e5ec96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m                         \u001b[0;34m[\u001b[0m\u001b[0;34m\"temple\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" god\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" gods\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" goddess\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" sacrifice\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" sacred\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" priests\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" zeus\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" priests\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" oracle\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                        [\"river\", \" rivers\", \" gulf\", \" sea\", \" dwell\", \" flow\", \" flows\", \" lake\", \" stream\", \" ships\", \" sailed\"]], \n\u001b[0;32m----> 4\u001b[0;31m                               [\"War\", \"Religion, Water\"] )\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mwar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0manalyse_Text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"army\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" revolt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" march\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" war\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" weapon\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" battle\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" death\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" barbarians\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" revolt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" cavalry\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"War\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-0bdcab6e1f47>\u001b[0m in \u001b[0;36manalyse_Text\u001b[0;34m(topic_lists, topic_name_list, scope)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0manalyse_Text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtopic_lists\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic_name_list\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Count\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mscope\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtopic_lists\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtopic_name_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Number of topic lists needs to be equal to number of topic names!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mtext_analysis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Number of topic lists needs to be equal to number of topic names!"
-     ]
-    }
-   ],
    "source": [
     "war_rel_water = analyse_Text([[\"army\", \" revolt\", \" march\", \" war\", \" weapon\", \" battle\", \" death\", \" barbarians\", \" revolt\", \" cavalry\"],\n",
     "                        [\"temple\", \" god\", \" gods\", \" goddess\", \" sacrifice\", \" sacred\", \" priests\", \" zeus\", \" priests\", \" oracle\"],\n",
     "                       [\"river\", \" rivers\", \" gulf\", \" sea\", \" dwell\", \" flow\", \" flows\", \" lake\", \" stream\", \" ships\", \" sailed\"]], \n",
-    "                              [\"War\", \"Religion, Water\"] )\n",
+    "                         [\"War\", \"Religion\", \"Water\"] )\n",
     "\n",
     "war = analyse_Text([[\"army\", \" revolt\", \" march\", \" war\", \" weapon\", \" battle\", \" death\", \" barbarians\", \" revolt\", \" cavalry\"]], [\"War\"])\n",
     "\n",
@@ -1773,65 +1772,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'War': [3, [148, 150, 184]]}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "war[\"athens\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rel[\"athens\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'War': [5, [11, 151, 181, 184, 185]], 'Religion': [4, [42, 148, 153, 177]]}"
+       "{'Religion': [3, [42, 148, 153]]}"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "war_rel[\"athens\"]"
+    "rel[\"athens\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "59 68 108\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(war), len(rel),len(war_rel))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
